; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_punycode.c_update.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_punycode.c_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* @flag, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = bitcast i32* %12 to i8*
  %14 = load i32, i32* %6, align 4
  %15 = call i8* @r_punycode_decode(i8* %13, i32 %14, i32* %8)
  store i8* %15, i8** %7, align 8
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i8* @r_punycode_encode(i32* %17, i32 %18, i32* %8)
  store i8* %19, i8** %7, align 8
  br label %20

20:                                               ; preds = %16, %11
  %21 = load i32*, i32** %4, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @r_crypto_append(i32* %21, i32* %23, i32 %24)
  %26 = load i8*, i8** %7, align 8
  %27 = call i32 @free(i8* %26)
  ret i32 1
}

declare dso_local i8* @r_punycode_decode(i8*, i32, i32*) #1

declare dso_local i8* @r_punycode_encode(i32*, i32, i32*) #1

declare dso_local i32 @r_crypto_append(i32*, i32*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
